--- a/src/components/ItemListContainer.css
+++ b/src/components/ItemListContainer.css
@@ -14,6 +14,12 @@
   position: relative;
 }
 
+.loading {
+  display: flex;
+  flex-direction: column; 
+  align-items: center;
+}
+
 .excursiones .card {
   flex: 1 1 calc(25% - 20px); /* 25% del ancho menos el gap para que entren 4 */
   max-width: calc(25% - 20px);
