--- a/src/components/CartWidget.css
+++ b/src/components/CartWidget.css
@@ -1,7 +1,10 @@
-
-.navbar-cart img {
-    height: 30px;
-    cursor: pointer;
+.navbar-cart {
+    background-image: url("./assets/cart.png"); 
+    display: block;
+    background-size: contain;
+    text-align: center;
+    height: 25px;
+    width: 30px;
 }
 
 .buttonCart{
