--- a/src/components/CartContainer.css
+++ b/src/components/CartContainer.css
@@ -122,3 +122,19 @@
 .clear-btn:hover {
   background-color: #d3d3d3;
 }
+
+.cart-empty-orders {
+  display: block;
+  margin: auto;
+  padding: 40px 0px 0px 0px;
+  text-decoration: none;
+  color: #333;
+  font-weight: 500;
+  transition: color 0.2s;
+  text-align: center;
+  width: fit-content;
+}
+
+.cart-empty-orders:hover {
+  color: #1e88e5;
+}
