Cambio las rutas de las imagenes para que sean absolutas y funcionen bien en vercel

--- a/src/components/CartWidget.css
+++ b/src/components/CartWidget.css
@@ -1,5 +1,5 @@
 .navbar-cart {
-    background-image: url("./assets/cart.png"); 
+    background-image: url("/assets/cart.png"); 
     display: block;
     background-size: contain;
     text-align: center;
